# Jormungandr

./: .gitignore  CITATION.cff  CONTRIBUTING.md  MODEL_CARD.md  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  pyproject.toml  requirements-edge.txt  requirements.txt
.github/workflows/: ci.yml  secret-scan.yml
configs/: default.yaml
docs/: PROGRESS.md  demo.html  demo_traces.json  stage2.md
outputs/: pi_synthetic_signal.npy
outputs/causal/: README.md  RUN_LOG.md  latency_curve.csv  quantization_report.json  run.json  stage3_causal_smoke.onnx  stage3_causal_smoke_int8.onnx  stage3_causal_smoke_parity.json  summary_table.csv
outputs/demo/: bytes_report.json  causal_stage3_int8.onnx  causal_stage3_quant_report.json  replay_traces.npz
outputs/fair_eval/: comparison.json
outputs/false_alarm/: false_alarm_rate.json
outputs/figures/: demo_traces.json  latency_table.md  make_baseline_comparison.py  make_eval_figures.py  make_pnw_zeroshot_figure.py  streaming_demo_capture.txt  streaming_live_demo.py
outputs/latency/: latency_report.json  latency_report.md
scripts/: DEMO.md  ablation_costs.py  benchmark_latency.py  build_replay_bundle.py  cache_teacher.py  causal_latency_curve.py  demo_edge.py  distill_smoke.py  eqtransformer_baseline.py  evaluate.py  export_demo_traces.py  export_gating_traces.py  export_gating_video.py  export_onnx.py  fair_comparison.py  false_alarm_rate.py  find_false_positive_clip.py  gating_demo_template.html  inspect_model.py  overfit_sanity.py  phasenet_baseline.py  pnw_zeroshot.py  quantize_onnx.py  sanity_check_data.py  signal_utils.py  stream_infer.py  threshold_sweep.py  train.py  train_distill.py
tests/: conftest.py  test_augment.py  test_causal.py  test_causal_preprocessing.py  test_demo_edge.py  test_distill.py  test_labels.py  test_model.py  test_no_torch_import.py  test_preprocessing.py  test_splits.py  test_streaming.py
(+27 files in other folders)
